Fix About heading margin on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -174,6 +174,10 @@ main > .about-section {
   text-decoration: underline;
 }
 
+.about-section .paragraphs-container p:first-child {
+  margin-top: 0;
+}
+
 .about-section .paragraphs-container p:last-child {
   margin-bottom: 35px;
 }
